demo/cards2.css
/* ... */
     .stock .reload-icon span::before,
     .stock .reload-icon span::after {
        content: '';
        display: inline-block;
        border-style: solid;
     }
     .stock .reload-icon span::before {
        width: 1.25em;
        height: 1.25em;
        border-color: transparent black black black;
        border-radius: 50%;
        border-width: .125em;
        -webkit-transform: rotate(45deg);
        transform: rotate(45deg);
     }
     .stock .reload-icon span::after {
        position: absolute;
        top: 0;
        left: 50%;
        width: 0;
        height: 0;
        border-color: transparent transparent transparent black;
        border-width: .3125em 0 .3125em .5em;
     }
  
  
  /* waste */
     .waste {
        z-index: 1;
     }
  
  /* foundation */
     .fnd .pile {
        left: 43.5%;
     }
     .fnd .pile::before {
        content '';
        position: absolute;
        top: 50%;
        left: 0;
        width: 100%;
        color: #000;
        font-family: 'Suit-Regular', sans-serif;
        font-size: 10vw;
        margin-top: -0.6em;
        line-height: 1;
        text-align: center;
        opacity: 0.25;
     }
     @media screen and (min-width: 768px) {
        .fnd .pile::before {
           font-size: 6em;
        }
     }
     @media screen and (min-width: 992px) {
        .fnd .pile::before {
           font-size: 7em;
        }
     }
     @media screen and (min-width: 1200px) {
        .fnd .pile::before {
           font-size: 8em;
        }
     }
     .fnd .pile.spades::before { content: '♠' }
     .fnd .pile.hearts::before { content: '♥' }
     .fnd .pile.diamonds::before { content: '♦' }
     .fnd .pile.clubs::before { content: '♣' }
  
  /* tableau */
     .tab .card {
        box-shadow: 0 0 5px rgba(0,0,0,.5);
        z-index: 1;
        margin-bottom: 10em;
     }
     /* face up */
     .tab .card:nth-child(2) { top: 6em; left: 0; }
     .tab .card:nth-child(3) { top: 12em; left: 0; }
     .tab .card:nth-child(4) { top: 18em; left: 0; }
     .tab .card:nth-child(5) { top: 24em; left: 0; }
     .tab .card:nth-child(6) { top: 30em; left: 0; }
     .tab .card:nth-child(7) { top: 36em;  left: 0; }
     .tab .card:nth-child(8) { top: 42em;  left: 0; }
     .tab .card:nth-child(9) { top: 48em;  left: 0; }
     .tab .card:nth-child(10) { top: 54em;  left: 0; }
     .tab .card:nth-child(11) { top: 60em;  left: 0; }
     .tab .card:nth-child(12) { top: 66em;  left: 0; }
     .tab .card:nth-child(13) { top: 72em;  left: 0; }
     .tab .card:nth-child(14) { top: 78em;  left: 0; }
     .tab .card:nth-child(15) { top: 84em;  left: 0; }
     .tab .card:nth-child(16) { top: 90em;  left: 0; }
     .tab .card:nth-child(17) { top: 96em;  left: 0; }
     .tab .card:nth-child(18) { top: 102em;  left: 0; }
     .tab .card:nth-child(19) { top: 108em;  left: 0; }
     .tab .card:nth-child(20) { top: 114em;  left: 0; }
     .tab .card:nth-child(21) { top: 120em;  left: 0; }
     /* face down */
     .tab .pile[data-unplayed='1'] .card:nth-child(2),
     .tab .pile[data-unplayed='2'] .card:nth-child(2),
     .tab .pile[data-unplayed='3'] .card:nth-child(2),
     .tab .pile[data-unplayed='4'] .card:nth-child(2),
     .tab .pile[data-unplayed='5'] .card:nth-child(2),
     .tab .pile[data-unplayed='6'] .card:nth-child(2) { top: 3em; }
     .tab .pile[data-unplayed='2'] .card:nth-child(3),
     .tab .pile[data-unplayed='3'] .card:nth-child(3),
     .tab .pile[data-unplayed='4'] .card:nth-child(3),
     .tab .pile[data-unplayed='5'] .card:nth-child(3),
     .tab .pile[data-unplayed='6'] .card:nth-child(3) { top: 6em; }
     .tab .pile[data-unplayed='3'] .card:nth-child(4),
     .tab .pile[data-unplayed='4'] .card:nth-child(4),
     .tab .pile[data-unplayed='5'] .card:nth-child(4),
     .tab .pile[data-unplayed='6'] .card:nth-child(4) { top: 9em; }
     .tab .pile[data-unplayed='4'] .card:nth-child(5),
     .tab .pile[data-unplayed='5'] .card:nth-child(5),
     .tab .pile[data-unplayed='6'] .card:nth-child(5) { top: 12em; }
     .tab .pile[data-unplayed='5'] .card:nth-child(6),
     .tab .pile[data-unplayed='6'] .card:nth-child(6) { top: 15em; }
     .tab .pile[data-unplayed='6'] .card:nth-child(7) { top: 18em; }
     /* piles with odd # of face down cards */
     .tab .pile[data-unplayed='1'] .card:nth-child(3) { top: 9em; left: 0; }
     .tab .pile[data-unplayed='1'] .card:nth-child(4),
     .tab .pile[data-unplayed='3'] .card:nth-child(5) { top: 15em; left: 0; }
     .tab .pile[data-unplayed='1'] .card:nth-child(5),
     .tab .pile[data-unplayed='3'] .card:nth-child(6),
     .tab .pile[data-unplayed='5'] .card:nth-child(7) { top: 21em; left: 0; }
     .tab .pile[data-unplayed='1'] .card:nth-child(6),
     .tab .pile[data-unplayed='3'] .card:nth-child(7),
     .tab .pile[data-unplayed='5'] .card:nth-child(8) { top: 27em; left: 0; }
     .tab .pile[data-unplayed='1'] .card:nth-child(7),
     .tab .pile[data-unplayed='3'] .card:nth-child(8),
     .tab .pile[data-unplayed='5'] .card:nth-child(9) { top: 33em;  left: 0; }
     .tab .pile[data-unplayed='1'] .card:nth-child(8),
     .tab .pile[data-unplayed='3'] .card:nth-child(9),
     .tab .pile[data-unplayed='5'] .card:nth-child(10) { top: 39em;  left: 0; }
     .tab .pile[data-unplayed='1'] .card:nth-child(9),
     .tab .pile[data-unplayed='3'] .card:nth-child(10),
     .tab .pile[data-unplayed='5'] .card:nth-child(11) { top: 45em;  left: 0; }
     .tab .pile[data-unplayed='1'] .card:nth-child(10),
     .tab .pile[data-unplayed='3'] .card:nth-child(11),
     .tab .pile[data-unplayed='5'] .card:nth-child(12) { top: 51em;  left: 0; }
     .tab .pile[data-unplayed='1'] .card:nth-child(11),
     .tab .pile[data-unplayed='3'] .card:nth-child(12),
     .tab .pile[data-unplayed='5'] .card:nth-child(13) { top: 57em;  left: 0; }
     .tab .pile[data-unplayed='1'] .card:nth-child(12),
     .tab .pile[data-unplayed='3'] .card:nth-child(13),
     .tab .pile[data-unplayed='5'] .card:nth-child(14) { top: 63em;  left: 0; }
/* ... */

